--- a/index.march.html
+++ b/index.march.html
@@ -54,9 +54,9 @@
     <option value="Self-employed">Self-employed</option>
   </select>
 </div><br>
-    <a href="file:///C:/Users/hp/Favorites/march7.html">Next>>
+    <a class="next" href="march7.html">Next>>
   </a>
-  <button input type="submit" value="Reset">Reset</button>
+  <button class="reset" type="submit" value="Reset">Reset</button>
 </div>
 </form>
 	<script src="mach7.js"></script>
